--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "petka17-react-scripts",
-  "version": "4.0.8",
+  "version": "4.3.4",
   "description": "Tweak configuration for use in new projects",
   "repository": "petka17/create-react-app",
   "license": "MIT",
@@ -23,6 +23,8 @@
   "dependencies": {
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.5",
@@ -52,6 +54,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.16.4",
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
     "resolve": "1.10.0",
